# mini-wasm-runtime

./: Cargo.toml
src/binary/: module.rs  section.rs  types.rs
src/execution/: runtime.rs  store.rs
